crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__month__multiple__all_periodic__specifier.snap
---
source: crates/tools/cron/src/tests/unit/month.rs
expression: result
---
Ok(
    (
        "",
        MonthRule {
            kinds: [
                MonthKind {
                    range: (
                        January,
                        December,
                    ),
                    periodic: MonthPeriodic(
                        2,
                    ),
                },
                MonthKind {
                    range: (
                        January,
                        January,
                    ),
                    periodic: MonthPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
